--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://bejenariu1996.github.io/robofriends-redux",
+  "homepage": "https://bejenariu1996.github.io/bianca/robofriends-redux",
   "version": "0.1.0",
   "private": true,
   "homepage":"https://bejenariu1996.github.io./robofriends-redux",
